Obsoleted AC_PROMPT_USER and AC_PROMPT_USER_NO_DEFINE.

--- a/NEWS
+++ b/NEWS
@@ -45,4 +45,6 @@
     AC_CHECK_CURL
     AC_CHECK_TAGLIB
     AC_PATH_GENERIC: marked obsolete
+    AC_PROMPT_USER
+    AC_PROMPT_USER_NO_DEFINE
     CHECK_SSL
