Obsoleted AC_COMPILE_WARNINGS, AX_CFLAGS_WARN_ALL_ANSI, and VL_PROG_CC_WARNINGS.

--- a/NEWS
+++ b/NEWS
@@ -44,7 +44,10 @@
 
     AC_CHECK_CURL
     AC_CHECK_TAGLIB
+    AC_COMPILE_WARNINGS
     AC_PATH_GENERIC: marked obsolete
     AC_PROMPT_USER
     AC_PROMPT_USER_NO_DEFINE
+    AX_CFLAGS_WARN_ALL_ANSI
     CHECK_SSL
+    VL_PROG_CC_WARNINGS
